  now has "Select Item" as the first option, rather than the
  ES at the top of the list.  This cleans up the interface a bit.

- 101103: allowed addables functionality is now moved to Silva
  Folders.  Any IContainer extending Products.Silva.Folder can
  now have addables settings.  NOTE: the allowed_addables API
  has also changed

Bugs Fixed
~~~~~~~~~~

- External Source Tool: the title now reverts back to "external
  source" when the tool is reset

- External Source Tool: removing an external source (via the
  remove button) now resets the tool

- Added condition in Container/tab_edit for objects that are both
  containers and content to show only one author name.

Ported from Silva 2.1
~~~~~~~~~~~~~~~~~~~~~

- Fixed 310589: Silva AutoTOC ignores "types to list" setting 
  when using silva sort order.


- Add a function sendmail which can send mail using Mailhost and
  Maildrophost in Zope 2.11 (otherwise Maildrophost is broken in Zope
  2.11).

- Display icons of members in tab_access, the user lookup screen, and
  group edition.

Silva 2.2a1 (2008-11-18)
------------------------

Features added
~~~~~~~~~~~~~~

- 261569: the new toc features made available in 2.1 are now
  accessible within documents by using the TOC code source (id:
  cs_toc).  This is part of service_codesources, and is copied into
  the Silva Root when SilvaExternalSources is installed.

- 101103: make addables functionality available within any type of
  Container, not just Publications

- Made the public page link in the tab space visible, styled as a tab.

- Silva is shipped with eggs by default.

- Silva root became a Five local site. You can activate others Five
  local site on publications. Afterwards, you will be able to add
  'local services' to these publications.

- Five (and grok) views are supported by default on content types.

- Formlib support have been added. You can create add, edit forms, and
  every others kind of SMI forms.
