@@ -207,7 +207,7 @@
     <span id="kupu-tb-buttons" class="kupu-tb-buttons">
       
     <span class="kupu-tb-buttongroup kupu-logo" style="float: right" id="kupu-logo">
-      <button type="button" class="kupu-logo" title="Kupu 1.4b1" i18n:attributes="title" accesskey="k" onclick="window.open('http://kupu.oscom.org');">&#160;</button>
+      <button type="button" class="kupu-logo" title="Kupu 1.4.1" i18n:attributes="title" accesskey="k" onclick="window.open('http://kupu.oscom.org');">&#160;</button>
     </span>
   
     <select id="kupu-tb-styles">
@@ -261,9 +261,7 @@
     <span class="kupu-tb-buttongroup kupu-source-span" id="kupu-source">
       <button type="button" class="kupu-source" id="kupu-source-button" title="Switch between visual editor and HTML view" i18n:attributes="title toggle_source_view;" accesskey="h">&#160;</button>
     </span>
-  
-    </span>
-  
+
     <select id="kupu-ulstyles" class="kupu-ulstyles">
       <option value="disc" i18n:translate="list-disc">&#9679;</option>
       <option value="square" i18n:translate="list-square">&#9632;</option>
@@ -278,6 +276,8 @@
       <option value="lower-alpha" i18n:translate="list-loweralpha">a</option>
     </select>
   
+    </span>
+ 
     </div>
   
           </td>
@@ -294,7 +294,7 @@
   
           </td>
     
-          <td style="width: 23em;" valign="top">
+          <td valign="top" width="270">
             
     <div class="kupu-toolboxes" id="kupu-toolboxes">
       
